--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,7 @@ Homepage: https://gitlab.com/nimf-i18n/nimf
 Package: nimf
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libnimf0 (= ${binary:Version})
 Recommends: im-config, x11-xkb-utils,
             nimf-anthy | nimf-chewing | nimf-libhangul | nimf-rime
 Suggests: fonts-noto-cjk, gnome-tweak-tool
