GTimeVal is deprecated: Use GDateTime
GTimeVal is deprecated: Use GDateTime

--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,10 @@ AS_IF([test "$CXX" = "g++"],
 AC_ARG_ENABLE([hardening],
   AS_HELP_STRING([--disable-hardening], [Disable hardening]))
 
-EXTRA_CFLAGS="-Wall -Werror"
+#‘GTimeVal’ is deprecated: Use 'GDateTime'
+#  instead [-Werror=deprecated-declarations]
+# EXTRA_CFLAGS="-Wall -Werror"
+EXTRA_CFLAGS="-Wall -Werror -Wno-deprecated-declarations"
 AS_IF([test "x$enable_hardening" != "xno"],
       [EXTRA_CFLAGS+=" -D_FORTIFY_SOURCE=2"])
 
